[gd_scene load_steps=13 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://IcecreamMachine.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stove.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://RiceCooker.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music/MainGame_bella-italia-eigenkomposition-113048.mp3" type="AudioStream" id=8]
[ext_resource path="res://Music/Wilhelm_Scream.ogg" type="AudioStream" id=9]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1488, 336, 1488, 496, 1392, 496, 656, 464, 1392, 336, 1488, 656, 1840, 80, 1840, 944, 1488, 752, 1488, 176, 1392, 80, 1392, 176, 1104, 112, 1104, 272, 976, 784, 976, 624, 1392, 752, 1392, 1160, -360, 1160, 816, 784, -344, -168, 496, 464, 944, 272, 656, 304, 1488, 944, 1392, 656, 816, 624, 1392, -168, 1392, -24, 944, 112, 496, 304 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 6, 7, 8 ), PoolIntArray( 6, 5, 1 ), PoolIntArray( 0, 6, 1 ), PoolIntArray( 6, 0, 9 ), PoolIntArray( 10, 6, 9, 11, 12 ), PoolIntArray( 13, 11, 4, 3 ), PoolIntArray( 11, 13, 12 ), PoolIntArray( 14, 15, 16, 17 ), PoolIntArray( 14, 17, 18, 19 ), PoolIntArray( 19, 18, 20, 21 ), PoolIntArray( 22, 13, 3, 23 ), PoolIntArray( 7, 24, 8 ), PoolIntArray( 25, 5, 8, 16 ), PoolIntArray( 25, 16, 15 ), PoolIntArray( 2, 25, 15, 3 ), PoolIntArray( 3, 15, 26 ), PoolIntArray( 20, 27, 28 ), PoolIntArray( 20, 28, 10, 12, 29 ), PoolIntArray( 20, 29, 22, 23, 30 ), PoolIntArray( 20, 30, 21 ), PoolIntArray( 19, 21, 3, 26 ) ]
outlines = [ PoolVector2Array( 1392, -24, 1392, 80, 1840, 80, 1840, 944, 1488, 944, 1488, 752, 1392, 752, 1392, 1160, -360, 1160, -344, -168, 1392, -168 ), PoolVector2Array( 1392, 176, 1488, 176, 1488, 336, 1392, 336 ), PoolVector2Array( 1392, 496, 1488, 496, 1488, 656, 1392, 656 ), PoolVector2Array( 944, 112, 1104, 112, 1104, 272, 944, 272 ), PoolVector2Array( 816, 624, 976, 624, 976, 784, 816, 784 ), PoolVector2Array( 496, 304, 656, 304, 656, 464, 496, 464 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 1504, 352, 1504, 160, 1824, 96, 1824, 928, 1376, 96, 1376, 160, 1376, 352, 1120, 288, 1120, 96, 992, 800, 992, 608, 1376, 736, 1376, 1160, -360, 1160, 800, 800, -344, -168, 480, 480, 1392, -168, 1384, -24, 672, 480, 672, 288, 1376, 480, 1376, 672, 1504, 928, 1504, 736, 1504, 672, 800, 608, 928, 96, 928, 288, 1504, 480, 480, 288 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 2, 1, 5 ), PoolIntArray( 5, 6, 7, 8 ), PoolIntArray( 4, 5, 8 ), PoolIntArray( 9, 10, 11, 12 ), PoolIntArray( 9, 12, 13, 14 ), PoolIntArray( 14, 13, 15, 16 ), PoolIntArray( 15, 17, 18, 4, 8 ), PoolIntArray( 19, 20, 21, 22, 10 ), PoolIntArray( 3, 23, 24 ), PoolIntArray( 25, 3, 24 ), PoolIntArray( 22, 25, 24, 11 ), PoolIntArray( 22, 11, 10 ), PoolIntArray( 19, 10, 26, 16 ), PoolIntArray( 15, 8, 27 ), PoolIntArray( 15, 27, 28, 20 ), PoolIntArray( 3, 25, 29 ), PoolIntArray( 0, 3, 29 ), PoolIntArray( 6, 0, 29, 21 ), PoolIntArray( 6, 21, 20, 28 ), PoolIntArray( 16, 26, 14 ), PoolIntArray( 30, 16, 15 ), PoolIntArray( 20, 30, 15 ), PoolIntArray( 6, 28, 7 ) ]
outlines = [ PoolVector2Array( 1384, -24, 1376, 96, 1824, 96, 1824, 928, 1504, 928, 1504, 736, 1376, 736, 1376, 1160, -360, 1160, -344, -168, 1392, -168 ), PoolVector2Array( 1376, 160, 1504, 160, 1504, 352, 1376, 352 ), PoolVector2Array( 1376, 480, 1504, 480, 1504, 672, 1376, 672 ), PoolVector2Array( 928, 96, 1120, 96, 1120, 288, 928, 288 ), PoolVector2Array( 800, 608, 992, 608, 992, 800, 800, 800 ), PoolVector2Array( 480, 288, 672, 288, 672, 480, 480, 480 ) ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 264, 580 )

[node name="Level1" type="CanvasLayer"]
script = ExtResource( 1 )
level_name = "level1"

[node name="TileMap" parent="." instance=ExtResource( 2 )]
show_collision = false
collision_layer = 16
collision_mask = 9
tile_data = PoolIntArray( -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, 65534, 4, 0, 65535, 4, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 5, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 131070, 4, 0, 131071, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 6, 0, 65539, 4, 0, 65540, 5, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 2, 0, 196606, 4, 0, 196607, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 6, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 2, 0, 131088, 2, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 2, 0, 262142, 4, 0, 262143, 4, 0, 196608, 6, 0, 196609, 4, 0, 196610, 6, 0, 196611, 4, 0, 196612, 6, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 2, 0, 196624, 2, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 2, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 2, 0, 327678, 4, 0, 327679, -1073741818, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 6, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 2, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 2, 0, 393214, 4, 0, 393215, 6, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 5, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 2, 0, 327689, 2, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 2, 0, 458750, 4, 0, 458751, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 6, 0, 393219, 4, 0, 393220, 6, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 2, 0, 393225, 2, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 2, 0, 524286, 4, 0, 524287, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 1610612742, 0, 458756, 5, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 2, 0, 589822, 4, 0, 589823, 4, 0, 524288, 6, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 5, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 2, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 2, 0, 655358, 6, 0, 655359, -1610612730, 0, 589824, 4, 0, 589825, 1610612742, 0, 589826, 4, 0, 589827, 4, 0, 589828, 6, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 2, 0, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 2, 0, 720893, 3, 0, 720894, 4, 0, 720895, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 2, 0, 655374, 2, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 2, 0, 786428, 3, 0, 786429, 3, 0, 786430, 4, 0, 786431, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 2, 0, 720910, 2, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 2, 0, 851964, 3, 0, 851965, 3, 0, 851966, 4, 0, 851967, 4, 0, 786432, 4, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 2, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 2, 0, 917500, 3, 0, 917501, 3, 0, 917502, 4, 0, 917503, 4, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 2, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 2, 0, 983038, 4, 0, 983039, 4, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 2, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 2, 0, 1048574, 4, 0, 1048575, 4, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 1114110, 4, 0, 1114111, 4, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 2, 0, 1048599, 2, 0, 1048600, 2, 0, 1048601, 2, 0, 1048602, 2, 0, 1048603, 2, 0, 1048604, 2, 0, 1048605, 2, 0 )

[node name="Navigation2D_Normal" type="Navigation2D" parent="."]
navigation_layers = 2

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D_Normal"]
navpoly = SubResource( 1 )
navigation_layers = 2

[node name="Navigation2D_Wide" type="Navigation2D" parent="."]
navigation_layers = 4

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D_Wide"]
navpoly = SubResource( 2 )
navigation_layers = 4

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1640, 496 )

[node name="Stove" parent="." instance=ExtResource( 5 )]
position = Vector2( 1534, 916 )
rotation = 1.5708

[node name="IcecreamMachine" parent="." instance=ExtResource( 4 )]
position = Vector2( 1816, 120 )
collision_layer = 1

[node name="RiceCooker" parent="." instance=ExtResource( 7 )]
position = Vector2( 1824, 920 )

[node name="EnemySpawnPoints" type="Node2D" parent="."]

[node name="EnemySpawnPoint" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -8, -80 )

[node name="EnemySpawnPoint2" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -32, 1120 )

[node name="EnemySpawnPoint3" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -144, 952 )

[node name="EnemySpawnPoint4" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -128, 64 )

[node name="EnemySpawnPoint5" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -184, 240 )

[node name="EnemySpawnPoint6" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -192, 736 )

[node name="EnemySpawnPoint7" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -88, 640 )

[node name="EnemySpawnPoint8" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -80, 392 )

[node name="EnemySpawnPoint9" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -200, -40 )

[node name="EnemySpawnPoint10" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -208, 1104 )

[node name="EnemySpawnPoint11" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( 224, 1112 )

[node name="EnemySpawnPoint12" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( 232, -88 )

[node name="EnemySpawnPoint13" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -208, 568 )

[node name="EnemySpawnPoint14" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -200, 352 )

[node name="EnemySpawnPoint15" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -272, 960 )

[node name="EnemySpawnPoint16" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( -256, 128 )

[node name="EnemySpawnPoint17" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( 96, 1112 )

[node name="EnemySpawnPoint18" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2( 144, -120 )

[node name="KitchenArea2D" type="Area2D" parent="."]
position = Vector2( 1624, 600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitchenArea2D"]
position = Vector2( 35, -33 )
shape = SubResource( 3 )

[node name="Line2D" type="Line2D" parent="KitchenArea2D"]
points = PoolVector2Array( -232, -616, -232, 504 )
default_color = Color( 0.635294, 0.117647, 0.117647, 0.317647 )
sharp_limit = 1.0

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="EnemyDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 1.25

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -6.0
autoplay = true

[connection signal="start_wave" from="." to="HUD" method="_on_Level1_start_wave"]
[connection signal="wave_finished" from="." to="HUD" method="_on_Level1_wave_finished"]
[connection signal="pizza_added" from="Stove" to="Player" method="_on_Stove_pizza_added"]
[connection signal="icecream_added" from="IcecreamMachine" to="Player" method="_on_IcecreamMachine_icecream_added"]
[connection signal="rice_added" from="RiceCooker" to="Player" method="_on_RiceCooker_rice_added"]
[connection signal="body_entered" from="KitchenArea2D" to="." method="_on_KitchenArea2D_body_entered"]
[connection signal="body_exited" from="KitchenArea2D" to="." method="_on_KitchenArea2D_body_exited"]
[connection signal="nextWave" from="HUD" to="." method="_on_HUD_nextWave"]
[connection signal="finished" from="EnemyDeathSound" to="." method="_on_EnemyDeathSound_finished"]
